@@ -63,12 +63,6 @@ The file paths can contain wildcards, e.g.,
 directory."
   :type '(choice string (repeat string)))
 
-(defcustom tempel-trigger-prefix nil
-  "Trigger string prefixes the template names.
-The trigger prefix must be entered first before the template name to
-trigger completion."
-  :type '(choice (const nil) string))
-
 (defcustom tempel-mark
   #(" " 0 1 (display (space :width (1)) face cursor))
   "Field start indicator."
@@ -226,8 +220,6 @@ REGION are the current region bounds."
              (sym (intern-soft name))
              (template (alist-get sym templates)))
     (tempel--delete-word name)
-    (when tempel-trigger-prefix
-      (tempel--delete-word tempel-trigger-prefix))
     (tempel--insert template region)))
 
 (defun tempel--range-modified (ov &rest _)
@@ -678,14 +670,7 @@ TEMPLATES must be a list in the form (modes plist . templates)."
 
 (defun tempel--prefix-bounds ()
   "Return prefix bounds."
-  (if tempel-trigger-prefix
-      (let ((end (point))
-            (beg (save-excursion
-                   (search-backward tempel-trigger-prefix (pos-bol) 'noerror))))
-        (when (and beg (save-excursion
-                         (not (re-search-backward "\\s-" beg 'noerror))))
-          (cons (+ beg (length tempel-trigger-prefix)) end)))
-    (bounds-of-thing-at-point 'symbol)))
+  (bounds-of-thing-at-point 'symbol))
 
 ;;;###autoload
 (defun tempel-expand (&optional interactive)
@@ -701,7 +686,7 @@ command."
   (when interactive
     (tempel--save))
   (if-let ((templates (tempel--templates))
-           (bounds (tempel--prefix-bounds))
+           (bounds (bounds-of-thing-at-point 'symbol))
            (name (buffer-substring-no-properties
                   (car bounds) (cdr bounds)))
            (sym (intern-soft name))
@@ -735,17 +720,14 @@ Capf, otherwise like an interactive completion command."
     ;; accept empty input bounds.
     (let* ((manually (eq this-command #'tempel-complete))
            (region (and manually (tempel--region))))
-      (when (and manually tempel-trigger-prefix (not (tempel--prefix-bounds)))
-        (insert tempel-trigger-prefix))
       (when-let ((templates (tempel--templates))
-                 (bounds (or (and (not region) (tempel--prefix-bounds))
+                 (bounds (or (and (not region) (bounds-of-thing-at-point 'symbol))
                              (and manually (cons (point) (point))))))
         (list (car bounds) (cdr bounds) templates
               :category 'tempel
               :exclusive 'no
               :company-kind (lambda (_) 'snippet)
               :exit-function (apply-partially #'tempel--exit templates region)
-              :company-prefix-length (and tempel-trigger-prefix t)
               :company-doc-buffer
               (apply-partially #'tempel--info-buffer templates
                                (lambda (elts)
