@@ -2,6 +2,11 @@
 #+author: Daniel Mendler
 #+language: en
 
+* Development
+
+- =tempel-trigger-prefix=: Remove feature. The goal is to replace this with a
+  generic mechanism in the Cape package.
+
 * Version 1.7 (2025-10-13)
 
 - Require Emacs 29.
